--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>Bootstrap Design Template - Pink</title>
+    <title>Hi, I am Naimul Ferdous</title>
     <!-- BOOTSTRAP CORE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!-- IONICON STYLE SHEET FOR BEAUTIFUL ICONS -->
@@ -59,12 +59,11 @@
                 <div class="row scroll-me">
                     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 text-center ">
 
-                        <h1 data-scroll-reveal="enter from the bottom after 0.2s">Time Fadeout,  Design Doesn't
+                        <h1 data-scroll-reveal="enter from the bottom after 0.2s">A CSE Professional
                         </h1>
 
-                        <h4 data-scroll-reveal="enter from the bottom after 0.4s">Morbi bibendum risus non nunc feugiat, quis venenatis augue fringilla. 
-                          Morbi vestibulum elit eget leo congue elementum.
-                           Aliquam at turpis urna. Nam pulvinar tincidunt posuere. 
+                        <h4 data-scroll-reveal="enter from the bottom after 0.4s">I am Naimul Ferdous. I am a CSE student, studied at IUBAT. 
+                            Now I am doing my internship at Systech Digital Limited. I am working there as a ASP.NET MVC programmer.
 
                         </h4>
                         <a data-scroll-reveal="enter from the bottom after 0.6s" href="#" class="btn btn-danger set-bk-clr">Explore Awesomeness</a>
