--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>Hi, I am Naimul Ferdous</title>
+    <title>Naimul Ferdous</title>
     <!-- BOOTSTRAP CORE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!-- IONICON STYLE SHEET FOR BEAUTIFUL ICONS -->
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="assets/img/logo.png"  alt=""/>
+                    <img src="assets/img/logo.jpg"  alt=""/>
                 </a>
             </div>
             <div class="navbar-collapse collapse">
