--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="assets/img/logo.jpg"  alt=""/>
+                    <img src="assets/img/logo.jpg"  alt="Naimul Ferdous"/>
                 </a>
             </div>
             <div class="navbar-collapse collapse">
