--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <h1 data-scroll-reveal="enter from the bottom after 0.2s">A CSE Professional
                         </h1>
 
-                        <h4 data-scroll-reveal="enter from the bottom after 0.4s">I am Naimul Ferdous. I am a CSE student, studied at IUBAT. 
+                        <h4 id="intro-text" data-scroll-reveal="enter from the bottom after 0.4s">I am Naimul Ferdous. I am a CSE student, studied at IUBAT. 
                             Now I am doing my internship at Systech Digital Limited. I am working there as a ASP.NET MVC programmer.
 
                         </h4>
