--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     </section>
     <!-- CONTACT SECTION END -->
     <footer>
-        &copy 2018 YourDomain.com  | <a href="http://www.designbootstrap.com/" target="_blank">by DesignBootstrap</a>
+        &copy 2018 naimul-ferdous.github.io  | <a href="https://naimul-ferdous.github.io/" <strong class="owner">Naimul Ferdous</strong></a>
     </footer>
     <!--FOOTER SECTION END  -->
     <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
