--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 <div class="row text-center" data-scroll-reveal="enter from the bottom after 0.2s">
                     <div class="col-md-6 col-md-offset-3 pad-bottom">
                         <h2><strong>STAY CONNECTED </strong></h2>
-                        Consectetur adipiscing elit felis dolor felis dolor vitae.Eelit felis dolor vitae
+                        Contact with me in the folowing address.
 
                     </div>
                 </div>
