--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
                     <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                         <h3><strong>Address : </strong></h3>
                         <br />
-                        <h4>102, Melborne City International,</h4>
-                        <h4>United States </h4>
-                        <h4><strong>Email : </strong>info@yourdomain.com</h4>
+                        <h4>House#20, Road#17,Sector#10, Uttara Model Town, Dhaka-1230,</h4>
+                        <h4>Bangladesh </h4>
+                        <h4><strong>Email : </strong>ferdousnaimul@gmail.com</h4>
                     </div>
 
                 </div>
