--- a/index.html
+++ b/index.html
@@ -429,9 +429,10 @@
             <a href="https://twitter.com/naimul_ferdous?lang=en" target="_blank"  class="external twitter" data-animate-hover="shake" data-animate="fadeInUp"><i class="fab fa-twitter"></i></a>
             <a href="https://plus.google.com/+NaimulFerdous"></i></a>
         </p>
-
         &copy 2018 naimul-ferdous.github.io  | <a href="https://naimul-ferdous.github.io/" <strong class="owner">Naimul Ferdous</strong></a>
     </footer>
+    <a href="#" class="scrollup"><i class="fa fa-angle-up fa-2x"></i></a>
+
     <!--FOOTER SECTION END  -->
     <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
     <!-- CORE JQUERY  SCRIPTS -->
