--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     
                 <div class="row text-center" data-scroll-reveal="enter from the bottom after 0.2s">
                     <div class="col-md-6 col-md-offset-3 pad-bottom">
-                        <h2 class="team"><strong>Recent Blog Posts- <a href="https://medium.com/@brian_99211" target="_blank">Medium</a></strong></h2>
+                        <h2 class="team"><strong>Recent Blog Posts- <a href="https://medium.com/@naimulferdous" target="_blank">Medium</a></strong></h2>
                     </div>
                 </div>
                 <div class="row pad-bottom" data-scroll-reveal="enter from the bottom after 0.4s">
@@ -258,11 +258,11 @@
                         <div class="card text-center">
                             <div class="card-header">
                                 <h3 class="card-title">Hello, World!</h3>
-                                <small class="text-muted ">Written by <a href="https://medium.com/@brian_99211" target="_blank"><strong>Brian Mwevi</strong></a> on Feb 13</small>
+                                <small class="text-muted ">Written by <a href="https://medium.com/@naimulferdous" target="_blank"><strong>Naimul Ferdous</strong></a> on Aug 16</small>
                             </div>      
                             <div class="card-body">
                                 <img src="assets/img/hello.jpg" width="350px" alt=""/>
-                                <p class="text-muted">Photo by <a href="https://unsplash.com/photos/FiZTaNTj2Ak?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Benjamin Davies</a> on <a href="https://unsplash.com/search/photos/world?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a></p>
+                                <p class="text-muted">Photo by <a href="https://www.flickr.com/photos/naimul_ferdous/43432159105/in/album-72157694910789090/" target="_blank">Naimul</a></p>
                                 <p class="card-text bg-secondary">Hello people of Medium. My name is Brian Mwevi, currently on apprenticeship at <a href="https://www.tunapanda.org/" target="_blank">Tunapanda Institute</a>, Nairobi Kenya. I’m a Web developer, a learner and a volunteer when it comes to improving our society.<br><br> I’m deeply interested in solving problems through Entrepreneurship and Technology. We have lots of opportunities out there but we fail to utilize them. Equipping ourselves with adequate skills in Entrepreneurship provides a proper solution on how to utilize these opportunities using...</p>
                             </div>
                             <div class="card-footer">
