--- a/index.html
+++ b/index.html
@@ -257,16 +257,16 @@
                     <div class="col-md-4 col-sm-6 ">
                         <div class="card text-center">
                             <div class="card-header">
-                                <h3 class="card-title">Hello, World!</h3>
+                                <h3 class="card-title">Interfacing LCD Display Controller</h3>
                                 <small class="text-muted ">Written by <a href="https://medium.com/@naimulferdous" target="_blank"><strong>Naimul Ferdous</strong></a> on Aug 16</small>
                             </div>      
                             <div class="card-body">
                                 <img src="assets/img/hello.jpg" width="350px" alt=""/>
                                 <p class="text-muted">Photo by <a href="https://www.flickr.com/photos/naimul_ferdous/43432159105/in/album-72157694910789090/" target="_blank">Naimul</a></p>
-                                <p class="card-text bg-secondary">Hello people of Medium. My name is Brian Mwevi, currently on apprenticeship at <a href="https://www.tunapanda.org/" target="_blank">Tunapanda Institute</a>, Nairobi Kenya. I’m a Web developer, a learner and a volunteer when it comes to improving our society.<br><br> I’m deeply interested in solving problems through Entrepreneurship and Technology. We have lots of opportunities out there but we fail to utilize them. Equipping ourselves with adequate skills in Entrepreneurship provides a proper solution on how to utilize these opportunities using...</p>
+                                <p class="card-text bg-secondary">Programming the AT89C2051 microcontroller to show the sentence “I LOVE YOU” on 16x2 line LCD display. <a href="http://bloggernf.blogspot.com" target="_blank">BloggerNF</a>, Here we use AT89C2051 microcontroller. We program it for showing “I LOVE YOU”. We program this reason and they are working as we program...</p>
                             </div>
                             <div class="card-footer">
-                                <button class="btn btn-info text-white"><a href="https://medium.com/tunapanda-institute/hello-world-a5cbe43b168d" target="_blank">Read More>></a></button>
+                                <button class="btn btn-info text-white"><a href="https://medium.com/@naimulferdous/interfacing-lcd-display-controller-ad814b05da36" target="_blank">Read More>></a></button>
                             </div>
                         </div>
                     </div>
