--- a/index.html
+++ b/index.html
@@ -85,42 +85,42 @@
                 <div class="row text-center pad-bottom" data-scroll-reveal="enter from the bottom after 0.4s">
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-cloud-outline"></i> -->
-                        <img id="service1" src="assets/img/html.png" alt="photoshop">
-                        <h4><strong>HTML5</strong></h4>
-                        <em>Hyper Text Mark-up Language</em> (HTML) I use this mark-up language to structure the web.
+                        <img id="service1" src="assets/img/1.jpg" alt="contest">
+                        <h4><strong>Contest</strong></h4>
+                        <em>Thinking hard while solving problems in Intra University Programming Contest.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-card"></i> -->
-                        <img id="service2" src="assets/img/css.png" alt="css">
+                        <img id="service2" src="assets/img/2.jpg" alt="office1">
     
-                        <h4><strong>CSS3 </strong></h4>
-                        <em>Cascading Style Sheet</em> (CSS) is what I use to style the HTML elements of the web.
+                        <h4><strong>Office </strong></h4>
+                        <em>First day at office.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-speedometer"></i> -->
-                        <img id="service3" src="assets/img/js.png" alt="Javascrip">
-                        <h4><strong>JAVASCRIPT</strong></h4>
-                        I use JavaScript language for scripting HTML elements and the Web.
+                        <img id="service3" src="assets/img/3.jpg" alt="office2">
+                        <h4><strong>At office</strong></h4>
+                        While working at office.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-settings"></i> -->
-                        <img id="service4" src="assets/img/wordpress.png" alt="Wordpress">
-                        <h4><strong>WORDPRESS</strong></h4>
-                        I use wordpress as the content management system (CMS) for designing beautiful websites.
+                        <img id="service4" src="assets/img/4.jpg" alt="office3">
+                        <h4><strong>Office Photo</strong></h4>
+                        Capturing office at office.
                     </div>
                 </div>
                 <div class="row text-center" data-scroll-reveal="enter from the bottom after 0.6s">
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-chatboxes-outline"></i> -->
-                        <img id="service5" src="assets/img/bootstrap4.png" alt="Bootstrap image icon">
-                        <h4><strong>BOOTSTRAP</strong></h4>
-                        I use Bootstrap, the most popular HTML, CSS, and JS framework for developing responsive projects.
+                        <img id="service5" src="assets/img/5.jpg" alt="room">
+                        <h4><strong>Room</strong></h4>
+                        While coding at room.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-pulse-strong"></i> -->
-                        <img id="service6" src="assets/img/jquery.png" alt="jquery png image">
-                        <h4><strong>JQUERY</strong></h4>
-                        Jquery is concise and fast JavaScript library that I use to simplify the client-side.
+                        <img id="service6" src="assets/img/6.jpg" alt="presentation">
+                        <h4><strong>Presentation</strong></h4>
+                        Before networking presentation. Suited and Booted.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-browsers-outline"></i> -->
