--- a/index.html
+++ b/index.html
@@ -85,26 +85,26 @@
                 <div class="row text-center pad-bottom" data-scroll-reveal="enter from the bottom after 0.4s">
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-cloud-outline"></i> -->
-                        <img id="service1" src="assets/img/1.jpg" alt="contest">
+                        <img src="assets/img/1.jpg" alt="contest">
                         <h4><strong>Contest</strong></h4>
                         <em>Thinking hard while solving problems in Intra University Programming Contest.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-card"></i> -->
-                        <img id="service2" src="assets/img/2.jpg" alt="office1">
+                        <img src="assets/img/2.jpg" alt="office1">
     
                         <h4><strong>Office </strong></h4>
                         <em>First day at office.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-speedometer"></i> -->
-                        <img id="service3" src="assets/img/3.jpg" alt="office2">
+                        <img src="assets/img/3.jpg" alt="office2">
                         <h4><strong>At office</strong></h4>
                         While working at office.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-settings"></i> -->
-                        <img id="service4" src="assets/img/4.jpg" alt="office3">
+                        <img src="assets/img/4.jpg" alt="office3">
                         <h4><strong>Office Photo</strong></h4>
                         Capturing office at office.
                     </div>
@@ -112,13 +112,13 @@
                 <div class="row text-center" data-scroll-reveal="enter from the bottom after 0.6s">
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-chatboxes-outline"></i> -->
-                        <img id="service5" src="assets/img/5.jpg" alt="room">
+                        <img src="assets/img/5.jpg" alt="room">
                         <h4><strong>Room</strong></h4>
                         While coding at room.
                     </div>
                     <div class="col-md-3">
                         <!-- <i class="ion-ios-pulse-strong"></i> -->
-                        <img id="service6" src="assets/img/6.jpg" alt="presentation">
+                        <img src="assets/img/6.jpg" alt="presentation">
                         <h4><strong>Presentation</strong></h4>
                         Before networking presentation. Suited and Booted.
                     </div>
