--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
                         <i class="ion-ios-drag clr-set f-big"></i>
                         <br />
                         <p>
-                            Consectetur adipiscing elit felis dolor felis dolor vitae.
-                     Consectetur adipiscing elit felis dolor felis dolor vitae.Eelit felis dolor vitae felis dolor vitae
+                            <span class="text-quote"> To give real service you must add something which cannot be bought or measured with money, and that is sincerity and integrity.</span><br> <span  class="quote"> < Don Alden Adams ></span>
                         </p>
                     </div>
                 </div>
