--- a/index.html
+++ b/index.html
@@ -219,18 +219,13 @@
                     <div class="col-md-4 col-sm-6 ">
                         <div class="card text-center">
                             <div class="card-header">
-                                <h3 class="card-title">The Origin of Love</h3>
-                                <small class="text-muted ">Written by <a href="#"><strong>Brian Mwevi</strong></a> on 4/21</small>
+                                <h3 class="card-title">স্টিভ জবস্‌ (পর্ব ১)</h3>
+                                <small class="text-muted ">Written by <a href="#"><strong>Naimul Ferdous</strong></a> on Feb 24</small>
                             </div>      
                             <div class="card-body">
-                                <img src="assets/img/clients.jpg" width="350px" alt=""/>
-                                <p class="text-muted">Image by unknown on <a href="#">Unsplash</a></p>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod laboris nisi ut aliquip.</p>
+                                <img src="assets/blogs/steve.jpg" width="350px" alt=""/>
+                                <p class="text-muted">Image by Naimul Ferdous on <a href="https://bloggernf.blogspot.com">BloggerNF</a></p>
+                                <p class="card-text">তথ্য-প্রযুক্তির আজকের এই যুগে অ্যাপল কম্পিউটার, আইফোন, আইপ্যাড, অ্যাইপড এই শব্দগুলোর সাথে আমরা সবাই পরিচিত। এইসব যুগান্তকারী জিনিসের উদ্ভাবক কলেজের গণ্ডি পেরুতে না পারা একজন। নাম তাঁর স্টিভেন পল জবস্‌, যিনি স্টিভ জবস্‌ নামে সুপরিচিত। তাঁর রয়েছে একক এবং যৌথভাবে ৩৪২টি পণ্যের পেটেন্ট! কিংবদন্তী এই উদ্যোক্তা এবং প্রযুক্তি উদ্ভাবককে পারসোনাল কম্পিউটার বিপ্লবের পথিকৃৎ বলা হয়। স্টিভেন পল জবস ১৯৫৫ সালের ২৪ ফেব্রুয়ারি যুক্তরাষ্ট্রের ক্যালিফোর্নিয়া অঙ্গরাজ্যের সান ফ্রান্সিসকোতে জন্মগ্রহণ করেন। তাঁর মায়ের নাম জোন স্কিবল ও পিতা সিরিয়ান ইমিগ্র্যান্ট আবদুল ফাত্তাহ জান্দালি। অবিবাহিত এবং স্টুডেন্ট বাবা-মার সন্তান স্টিভ জবস্‌-কে জন্মের পরপরই দত্তক দিয়ে দেয়া হয় পল ও ক্লারা জবস দম্পতির কাছে। পরবর্তিতে দত্তক পিতা-মাতার দেয়া “স্টিভ জবস্‌” নাম নিয়ে তিনি হন জগৎবিখ্যাত।.</p>
                             </div>
                             <div class="card-footer">
                                 <button class="btn btn-info"><a href="#">Read More>></a></button>
