--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 <p class="card-text">তথ্য-প্রযুক্তির আজকের এই যুগে অ্যাপল কম্পিউটার, আইফোন, আইপ্যাড, অ্যাইপড এই শব্দগুলোর সাথে আমরা সবাই পরিচিত। এইসব যুগান্তকারী জিনিসের উদ্ভাবক কলেজের গণ্ডি পেরুতে না পারা একজন। নাম তাঁর স্টিভেন পল জবস্‌, যিনি স্টিভ জবস্‌ নামে সুপরিচিত। তাঁর রয়েছে একক এবং যৌথভাবে ৩৪২টি পণ্যের পেটেন্ট! কিংবদন্তী এই উদ্যোক্তা এবং প্রযুক্তি উদ্ভাবককে পারসোনাল কম্পিউটার বিপ্লবের পথিকৃৎ বলা হয়। স্টিভেন পল জবস ১৯৫৫ সালের ২৪ ফেব্রুয়ারি যুক্তরাষ্ট্রের ক্যালিফোর্নিয়া অঙ্গরাজ্যের সান ফ্রান্সিসকোতে জন্মগ্রহণ করেন। তাঁর মায়ের নাম জোন স্কিবল ও পিতা সিরিয়ান ইমিগ্র্যান্ট আবদুল ফাত্তাহ জান্দালি। অবিবাহিত এবং স্টুডেন্ট বাবা-মার সন্তান স্টিভ জবস্‌-কে জন্মের পরপরই দত্তক দিয়ে দেয়া হয় পল ও ক্লারা জবস দম্পতির কাছে। পরবর্তিতে দত্তক পিতা-মাতার দেয়া “স্টিভ জবস্‌” নাম নিয়ে তিনি হন জগৎবিখ্যাত।.</p>
                             </div>
                             <div class="card-footer">
-                                <button class="btn btn-info"><a href="#">Read More>></a></button>
+                                <button class="btn btn-info"><a href="https://medium.com/@naimulferdous/%E0%A6%B8%E0%A7%8D%E0%A6%9F%E0%A6%BF%E0%A6%AD-%E0%A6%9C%E0%A6%AC%E0%A6%B8%E0%A7%8D-%E0%A6%AA%E0%A6%B0%E0%A7%8D%E0%A6%AC-%E0%A7%A7-b3a5badef0f3">Read More>></a></button>
                             </div>
                         </div>
                     </div>
