--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             Now I am doing my internship at Systech Digital Limited. I am working there as a ASP.NET MVC programmer.
 
                         </h4>
-                        <a data-scroll-reveal="enter from the bottom after 0.6s" href="#" class="btn btn-danger set-bk-clr">Explore Awesomeness</a>
+                        <a data-scroll-reveal="enter from the bottom after 0.6s" href="#services" class="btn btn-danger set-bk-clr">Explore Awesomeness</a>
                     </div>
                 </div>
             </div>
