--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-md-4 col-sm-4 html">
                     <div class="work-wrapper">
 
-                        <a class="fancybox-media" title="Image Title Goes Here" href="assets/img/portfolio/1.jpg">
+                        <a class="fancybox-media" title="IUPC 2017" href="assets/img/portfolio/1.jpg">
 
                             <img src="assets/img/portfolio/1.jpg" class="img-responsive " alt="" />
                         </a>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 css">
                     <div class="work-wrapper">
-                        <a class="fancybox-media" title="Image Title Goes Here" href="assets/img/portfolio/2.jpg">
+                        <a class="fancybox-media" title="In front of office building." href="assets/img/portfolio/2.jpg">
 
                             <img src="assets/img/portfolio/2.jpg" class="img-responsive " alt="" />
                         </a>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 code">
                     <div class="work-wrapper">
-                        <a class="fancybox-media" title="Image Title Goes Here" href="assets/img/portfolio/3.jpg">
+                        <a class="fancybox-media" title="at office" href="assets/img/portfolio/3.jpg">
 
                             <img src="assets/img/portfolio/3.jpg" class="img-responsive " alt="" />
                         </a>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 script">
                     <div class="work-wrapper">
-                        <a class="fancybox-media" title="Image Title Goes Here" href="assets/img/portfolio/4.jpg">
+                        <a class="fancybox-media" title="Office photography" href="assets/img/portfolio/4.jpg">
 
                             <img src="assets/img/portfolio/4.jpg" class="img-responsive " alt="" />
                         </a>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 html script">
                     <div class="work-wrapper">
-                        <a class="fancybox-media" title="Image Title Goes Here" href="assets/img/portfolio/5.jpg">
+                        <a class="fancybox-media" title="In room" href="assets/img/portfolio/5.jpg">
 
                             <img src="assets/img/portfolio/5.jpg" class="img-responsive " alt="" />
                         </a>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 css code">
                     <div class="work-wrapper">
-                        <a class="fancybox-media" title="Image Title Goes Here" href="assets/img/portfolio/6.jpg">
+                        <a class="fancybox-media" title="Networking presentation" href="assets/img/portfolio/6.jpg">
 
                             <img src="assets/img/portfolio/6.jpg" class="img-responsive" alt="" />
                         </a>
