--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-3 pad-bottom" data-scroll-reveal="enter from the bottom after 0.2s">
                     <h2><strong>WORK PORFOLIO</strong></h2>
-                    Consectetur adipiscing elit felis dolor felis dolor vitae.Eelit felis dolor vitae
+                    My Works, Projects and Certifications are given below.
 
                 </div>
             </div>
@@ -168,6 +168,17 @@
 
 
             <div class="row text-center" id="portfolio-div" >
+                <div class="col-md-4 col-sm-4 html">
+                    <div class="work-wrapper">
+
+                        <a href="https://brianmwevi.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/portfolio/1.jpg">
+
+                            <img src="assets/img/portfolio/1.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
 
           
             </div>
