--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="col-md-4 col-sm-4 html">
                     <div class="work-wrapper">
 
-                        <a href="https://brianmwevi.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/portfolio/1.jpg">
+                        <a href="https://naimul-ferdous.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/portfolio/1.jpg">
 
                             <img src="assets/img/portfolio/1.jpg" class="img-responsive " alt="" />
                         </a>
