--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <a href="#" data-filter=".html" class="btn btn-info btn-sm">HTML</a>
                         <a href="#" data-filter=".css" class="btn btn-info btn-sm">CSS</a>
                         <a href="#" data-filter=".code" class="btn btn-info btn-sm">CODE</a>
-                        <a href="#" data-filter=".script" class="btn btn-info btn-sm">SCRIPT</a>
+                        <a href="#" data-filter=".certificate" class="btn btn-info btn-sm">Certifications</a>
                     </div>
 
                 </div>
@@ -168,7 +168,7 @@
 
 
             <div class="row text-center" id="portfolio-div" >
-                <div class="col-md-4 col-sm-4 html">
+                <div class="col-md-4 col-sm-4 certificate">
                     <div class="work-wrapper">
 
                         <a href="https://naimul-ferdous.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/portfolio/1.jpg">
