--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                 <div class="col-md-4 col-sm-4 certificate">
                     <div class="work-wrapper">
 
-                        <a href="https://naimul-ferdous.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/portfolio/1.jpg">
+                        <a href="https://naimul-ferdous.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/certificate/1.jpg">
 
-                            <img src="assets/img/portfolio/1.jpg" class="img-responsive " alt="" />
+                            <img src="assets/img/certificate/1.jpg" class="img-responsive " alt="" />
                         </a>
 
 
