--- a/index.html
+++ b/index.html
@@ -180,6 +180,18 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-4 certificate">
+                    <div class="work-wrapper">
+
+                        <a href="https://naimul-ferdous.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/certificate/2.jpg">
+
+                            <img src="assets/img/certificate/2.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
           
             </div>
         </div>
