--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="col-md-4 col-sm-4 certificate">
                     <div class="work-wrapper">
 
-                        <a href="https://naimul-ferdous.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/certificate/1.jpg">
+                        <a class="fancybox-media" title="ASP.NET MVC Certificate" href="assets/img/certificate/1.jpg">
 
                             <img src="assets/img/certificate/1.jpg" class="img-responsive " alt="" />
                         </a>
@@ -183,7 +183,7 @@
                 <div class="col-md-4 col-sm-4 certificate">
                     <div class="work-wrapper">
 
-                        <a href="https://naimul-ferdous.github.io/Portfolio-theme/" target="_blank" class="fancybox-media" title="Portfolio theme" href="assets/img/certificate/2.jpg">
+                        <a class="fancybox-media" title="LICT Certificate" href="assets/img/certificate/2.jpg">
 
                             <img src="assets/img/certificate/2.jpg" class="img-responsive " alt="" />
                         </a>
