--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                 <div class="col-md-12 pad-bottom" data-scroll-reveal="enter from the bottom after 0.4s">
                     <div class="caegories">
                         <a href="#" data-filter="*" class="active btn btn-info btn-sm">All</a>
-                        <a href="#" data-filter=".html" class="btn btn-info btn-sm">HTML</a>
-                        <a href="#" data-filter=".css" class="btn btn-info btn-sm">CSS</a>
+                        <a href="#" data-filter=".work" class="btn btn-info btn-sm">Works</a>
+                        <a href="#" data-filter=".project" class="btn btn-info btn-sm">Projects</a>
                         <a href="#" data-filter=".code" class="btn btn-info btn-sm">CODE</a>
                         <a href="#" data-filter=".certificate" class="btn btn-info btn-sm">Certifications</a>
                     </div>
