--- a/index.html
+++ b/index.html
@@ -192,6 +192,42 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-4 certificate">
+                    <div class="work-wrapper">
+
+                        <a class="fancybox-media" title="IUPC, Spring-2017" href="assets/img/certificate/3.jpg">
+
+                            <img src="assets/img/certificate/3.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-4 certificate">
+                    <div class="work-wrapper">
+
+                        <a class="fancybox-media" title="Udemy Certificate of Completion (C# Basics)" href="assets/img/certificate/4.jpg">
+
+                            <img src="assets/img/certificate/4.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-4 certificate">
+                    <div class="work-wrapper">
+
+                        <a class="fancybox-media" title="Udemy Certificate of Completion (Complete Java)" href="assets/img/certificate/5.jpg">
+
+                            <img src="assets/img/certificate/5.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
           
             </div>
         </div>
