--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <div class="row text-center" data-scroll-reveal="enter from the bottom after 0.2s">
                     <div class="col-md-6 col-md-offset-3 pad-bottom">
                         <h2><strong>STAY CONNECTED </strong></h2>
-                        Contact with me in the folowing address.
+                        Contact with me in the following address.
 
                     </div>
                 </div>
@@ -337,8 +337,8 @@
                     <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                         <h3><strong>Address : </strong></h3>
                         <br />
-                        <h4>House#20, Road#17,Sector#10, Uttara Model Town, Dhaka-1230,</h4>
-                        <h4>Bangladesh </h4>
+                        <h4>House#20, Road#17, Sector#10, Uttara Model Town, Dhaka-1230,</h4>
+                        <h4>Bangladesh. </h4>
                         <h4><strong>Email : </strong>ferdousnaimul@gmail.com</h4>
                     </div>
 
@@ -351,13 +351,13 @@
     </section>
     <!-- CONTACT SECTION END -->
     <footer>
-            <p class="social">
-                    <a href="https://www.facebook.com/nf.naimul" class="external facebook " data-animate-hover="shake" data-animate="fadeInUp"  target="_blank" class="fb"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/ferdousnaimul/" class="external instagram" data-animate-hover="shake" data-animate="fadeInUp" target="_blank" ><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/naimul_ferdous?lang=en" target="_blank"  class="external twitter" data-animate-hover="shake" data-animate="fadeInUp"><i class="fab fa-twitter"></i></a>
-                    <a href="https://plus.google.com/+NaimulFerdous"></i></a>
-                </p>
-        &copy 2018 naimul-ferdous.github.io  | <a href="https://naimul-ferdous.github.io/" <strong class="owner">Naimul Ferdous</strong></a>
+        <p class="social">
+                <a href="https://www.facebook.com/nf.naimul" class="external facebook " data-animate-hover="shake" data-animate="fadeInUp"  target="_blank" class="fb"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/ferdousnaimul/" class="external instagram" data-animate-hover="shake" data-animate="fadeInUp" target="_blank" ><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/naimul_ferdous?lang=en" target="_blank"  class="external twitter" data-animate-hover="shake" data-animate="fadeInUp"><i class="fab fa-twitter"></i></a>
+                <a href="https://plus.google.com/+NaimulFerdous"></i></a>
+            </p>
+            &copy 2018 naimul-ferdous.github.io  | <a href="https://naimul-ferdous.github.io/" <strong class="owner">Naimul Ferdous</strong></a>
     </footer>
     <a href="#" class="scrollup"><i class="fa fa-angle-up fa-2x"></i></a>
 
