--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3 pad-bottom" data-scroll-reveal="enter from the bottom after 0.2s">
                         <h2 class="about"><strong>ABOUT ME</strong></h2>
-                    <p class="aboutPara">I am working exclusively as a freelancer who is not stereotyped as undependable when it comes to availability and meeting commitments of delivering work. This is my day job. My day is committed to my clients.</p>
+                    <p class="aboutPara">Currently working for Systech Digital Limited as an ASP.NET MVC Software Developer (Intern) where I am presenting my integrity, efficiency, sincerity to the best of my ability through my academic and practical knowledge for the interest of the organization and my career development.</p>
     
                     </div>
                 </div>
