--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                         <h1 data-scroll-reveal="enter from the bottom after 0.2s">A CSE Professional
                         </h1>
 
-                        <h4 id="intro-text" data-scroll-reveal="enter from the bottom after 0.4s">I am Naimul Ferdous. I am a CSE student, studied at IUBAT. 
-                            Now I am doing my internship at Systech Digital Limited. I am working there as a ASP.NET MVC programmer.
+                        <h4 id="intro-text" data-scroll-reveal="enter from the bottom after 0.4s">I am a Computer Science and Engineering Professional. I studied Computer Science and Engineering at IUBAT- International University of Business Agriculture and Technology. I am passionate about Computer Programming and Software Development. I am expert in JavaSE and ASP.NET MVC.
 
                         </h4>
                         <a data-scroll-reveal="enter from the bottom after 0.6s" href="#services" class="btn btn-danger set-bk-clr">Explore Awesomeness</a>
