--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3 pad-bottom" data-scroll-reveal="enter from the bottom after 0.2s">
                         <h2 class="about"><strong>ABOUT ME</strong></h2>
-                    <p class="aboutPara">Currently working for Systech Digital Limited as an ASP.NET MVC Software Developer (Intern) where I am presenting my integrity, efficiency, sincerity to the best of my ability through my academic and practical knowledge for the interest of the organization and my career development.</p>
+                        <p class="aboutPara">Currently working for Systech Digital Limited as an ASP.NET MVC Software Developer (Intern) where I am presenting my integrity, efficiency, sincerity to the best of my ability through my academic and practical knowledge for the interest of the organization and my career development.</p>
     
                     </div>
                 </div>
+                <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+                <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="nferdous"><a class="LI-simple-link" href='https://bd.linkedin.com/in/nferdous?trk=profile-badge'>Naimul Ferdous</a></div>
                 <div class="col-md-4 col-sm-4 html">
                     <div class="work-wrapper">
 
@@ -355,7 +357,7 @@
                 <a href="https://www.instagram.com/ferdousnaimul/" class="external instagram" data-animate-hover="shake" data-animate="fadeInUp" target="_blank" ><i class="fab fa-instagram"></i></a>
                 <a href="https://twitter.com/naimul_ferdous?lang=en" target="_blank"  class="external twitter" data-animate-hover="shake" data-animate="fadeInUp"><i class="fab fa-twitter"></i></a>
                 <a href="https://plus.google.com/+NaimulFerdous"></i></a>
-            </p>
+        </p>
             &copy 2018 naimul-ferdous.github.io  | <a href="https://naimul-ferdous.github.io/" <strong class="owner">Naimul Ferdous</strong></a>
     </footer>
     <a href="#" class="scrollup"><i class="fa fa-angle-up fa-2x"></i></a>
