--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-4 work">
+                    <div class="work-wrapper">
+
+                        <a href="https://bloggernf.blogspot.com" target="_blank" class="fancybox-media" title="My Blog" href="assets/img/works/2.jpg">
+
+                            <img src="assets/img/works/2.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
                 
                 <div class="col-md-4 col-sm-4 certificate">
                     <div class="work-wrapper">
