--- a/index.html
+++ b/index.html
@@ -197,6 +197,18 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-4 project">
+                    <div class="work-wrapper">
+
+                        <a href="https://github.com/naimul-ferdous/BoatAndCar" target="_blank" class="fancybox-media" title="Boat and Car Computer Graphics Project using OpenGL" href="assets/img/projects/1.jpg">
+
+                            <img src="assets/img/projects/1.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
                 
                 <div class="col-md-4 col-sm-4 certificate">
                     <div class="work-wrapper">
