--- a/index.html
+++ b/index.html
@@ -221,6 +221,18 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-4 project">
+                    <div class="work-wrapper">
+
+                        <a href="https://github.com/naimul-ferdous/8051-Keil-Project-Files" target="_blank" class="fancybox-media" title="Embedded Systems Projects" href="assets/img/projects/3.jpg">
+
+                            <img src="assets/img/projects/3.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
                 
                 <div class="col-md-4 col-sm-4 certificate">
                     <div class="work-wrapper">
