--- a/index.html
+++ b/index.html
@@ -258,6 +258,18 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-4 code">
+                    <div class="work-wrapper">
+
+                        <a href="https://github.com/naimul-ferdous/assembly" target="_blank" class="fancybox-media" title="Assembly Programs" href="assets/img/codes/3.jpg">
+
+                            <img src="assets/img/codes/3.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
                 
                 <div class="col-md-4 col-sm-4 certificate">
                     <div class="work-wrapper">
