--- a/index.html
+++ b/index.html
@@ -234,6 +234,18 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-4 project">
+                    <div class="work-wrapper">
+
+                        <a href="https://github.com/naimul-ferdous/8051-Proteus-Files" target="_blank" class="fancybox-media" title="Proteus Designs" href="assets/img/projects/4.jpg">
+
+                            <img src="assets/img/projects/4.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
                 <div class="col-md-4 col-sm-4 code">
                     <div class="work-wrapper">
 
