--- a/index.html
+++ b/index.html
@@ -197,6 +197,30 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-4 work">
+                    <div class="work-wrapper">
+
+                        <a href="https://github.com/naimul-ferdous/8051-Programs" target="_blank" class="fancybox-media" title="8051 Programs" href="assets/img/works/3.jpg">
+
+                            <img src="assets/img/works/3.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-4 work">
+                    <div class="work-wrapper">
+
+                        <a href="https://github.com/naimul-ferdous/8051-Proteus-Files" target="_blank" class="fancybox-media" title="Proteus Designs" href="assets/img/work/4.jpg">
+
+                            <img src="assets/img/work/4.jpg" class="img-responsive " alt="" />
+                        </a>
+
+
+                    </div>
+                </div>
+
                 <div class="col-md-4 col-sm-4 project">
                     <div class="work-wrapper">
 
@@ -234,18 +258,6 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 col-sm-4 project">
-                    <div class="work-wrapper">
-
-                        <a href="https://github.com/naimul-ferdous/8051-Proteus-Files" target="_blank" class="fancybox-media" title="Proteus Designs" href="assets/img/projects/4.jpg">
-
-                            <img src="assets/img/projects/4.jpg" class="img-responsive " alt="" />
-                        </a>
-
-
-                    </div>
-                </div>
-
                 <div class="col-md-4 col-sm-4 code">
                     <div class="work-wrapper">
 
@@ -264,18 +276,6 @@
                         <a href="https://github.com/naimul-ferdous/assembly" target="_blank" class="fancybox-media" title="Assembly Programs" href="assets/img/codes/3.jpg">
 
                             <img src="assets/img/codes/3.jpg" class="img-responsive " alt="" />
-                        </a>
-
-
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-4 code">
-                    <div class="work-wrapper">
-
-                        <a href="https://github.com/naimul-ferdous/8051-Programs" target="_blank" class="fancybox-media" title="8051 Programs" href="assets/img/codes/2.jpg">
-
-                            <img src="assets/img/codes/2.jpg" class="img-responsive " alt="" />
                         </a>
 
 
